# neurovision-research

./: .gitignore  CITATION.cff  LICENSE  README.md
cardiff-translation/: .gitignore  README.md  REFERENCES.md  main.py  pyproject.toml
cardiff-translation/docs/: CHYPS-V-br20-DeepSeek-R1-1776-comments.md  CHYPS-V-br20-Deepseek-v3.2-deepthink-25-12-10-comments.md  CHYPS-V-br20-Gemini-3.0-Pro-12-10-notas.md  CHYPS-V-br20-Grok-4.1-25-12-10-comments.md  CHYPS-V-original.md  CHYPS-V-plain-text.txt  CHYPS-V-questions-only.txt  CHYPS-V-scoring.md  Cardiff_Hypersensitivity_Scale_Visual___2024_1.qsf  textual-legibility-analysis-with-ALT.md  v2APPENDIX_Cardiff_Hypersensitivity_Scale_Visual.txt
cardiff-translation/docs/Price/: v2APPENDIX_Cardiff_Hypersensitivity_Scale_Visual.txt
cardiff-translation/docs/osfstorage-archive/: .Price CHYPS Cohort 1.csv.Oh1IUW  Price CHYPS Cohort 1.sav  Price CHYPS Cohort 2.sav  Price CHYPS Cohort 3.sav  Price CHYPS Cohort 5.sav
cardiff-translation/prompts/: prompts.md
cardiff-translation/results/: analysis_results.csv  report.md
cardiff-translation/results/plain-text/: statistical_analysis.md
cardiff-translation/results/questions-only/: statistical_analysis.md
cardiff-translation/results/rankings/: ranking_method1.csv  ranking_method2_bertscore.csv  ranking_method2_comet.csv  ranking_method2_summary.csv  ranking_method3.csv
cardiff-translation/scripts/: RANKING_METHODS.md  plot_histograms.py  rank_models.py
cardiff-translation/src/: main.py
cardiff-translation/translations/markdown/: CHYPS-V-br20-Claude-4.0-Sonnet-25-07-24.md  CHYPS-V-br20-Claude-4.1-Opus-24-09-30.md  (+23 more)
(+270 files in other folders)
